--- a/package.json
+++ b/package.json
@@ -3,12 +3,41 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
+    "@elastic/react-search-ui": "^1.5.1",
+    "@elastic/search-ui-app-search-connector": "^1.5.1",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/data-grid": "^4.0.0-alpha.24",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
+    "@material-ui/pickers": "^3.3.10",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
+    "compact": "^1.0.0",
+    "date-fns": "^2.20.1",
+    "dispatch": "^1.0.2",
+    "isundefined": "^1.0.1",
+    "notistack": "^1.0.5",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.5.2",
+    "react-data-grid": "^7.0.0-canary.38",
+    "react-datepicker": "^3.7.0",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-hook-form": "^7.0.5",
+    "react-redux": "^7.2.3",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.1",
+    "react-search-field": "^1.2.0",
+    "react-select": "^4.3.0",
+    "react-window": "^1.8.6",
+    "reactstrap": "^8.9.0",
+    "reduce": "^1.0.2",
+    "redux-devtools": "^3.7.0",
+    "redux-thunk": "^2.3.0",
+    "sweetalert2": "^10.16.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
